--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</title>
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 
 
 </head>
@@ -23,9 +23,9 @@
 		<h2>Just relax <span class="and">&</span> <br>let us do the heavy lifting</h2>
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
 		<ul>
-			<li><i class="fa fa-check" aria-hidden="true"></i><a href="#">Initial setup and customization</a></li>
-			<li><i class="fa fa-check" aria-hidden="true"></i><a href="#">Initial setup and customization</a></li>
-			<li><i class="fa fa-check" aria-hidden="true"></i><a href="#">Initial setup and customization</a></li>
+			<li><i class="fa fa-check-circle-o" aria-hidden="true"></i><a href="#">Initial setup and customization</a></li>
+			<li><i class="fa fa-check-circle-o" aria-hidden="true"></i><a href="#">Initial setup and customization</a></li>
+			<li><i class="fa fa-check-circle-o" aria-hidden="true"></i><a href="#">Initial setup and customization</a></li>
 		</ul>
 
 		<button type="button" class="banner-btn">Learn more</button>
